--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resume | Vishal Saraiwal</title>
-    <link rel="shortcut icon" href="./Images/" alt="MyPic">
+    <link rel="shortcut icon" href="./Images/images/logo-1.png" alt="MyPic">
     <!-- external css  -->
     <link rel="stylesheet" href="./CSS/resume.css">
     <!-- Headline CSS Plugin  -->
