--- a/index.html
+++ b/index.html
@@ -140,21 +140,24 @@
                         </div>
                         <div class="timeline__wrapper">
                             <div class="item">
-                                <p>2017-2018</p>
-                                <p class="center">High School</p>
-                                <p>Central Board Of Secondary Education</p>
+                                <p>2020-2023</p>
+                                <p class="center">B.Sc Hons - Pursuing</p>
+                                <p>Computer Science</p>
+                                <p>From Chaudhary Charan Singh University</p>
                             </div>
                             <div class="item">
                                 <p>2019-2020</p>
-                                <p class="center">Intermediate</p>
+                                <p class="center">Intermediate - PCM</p>
+                                <p class="center">From Rishabh Academy</p>
                                 <p>Central Board Of Secondary Education</p>
                             </div>
                             <div class="item">
-                                <p>2020-2023</p>
-                                <p class="center">Graduation-Pursuing</p>
-                                <p>B.Sc Hons</p>
-                                <p>Computer Science</p>
+                                <p>2017-2018</p>
+                                <p class="center">High School - Science</p>
+                                <p class="center">From Aatman Public School</p>
+                                <p>Central Board Of Secondary Education</p>
                             </div>
+
                         </div>
                     </div>
                     <div class="inner-right">
@@ -166,9 +169,9 @@
                             <div class="item">
                                 <p>11 Feb 2022 to Now</p>
                                 <p class="center">BR Softsol Pvt. Ltd.</p>
-                                <p>Web Developer | Designing Head</p>
+                                <p>Web Developer | Designing Head</p><br>
                                 <p><strong>Web Developer </strong>FrontEnd-Developer : HTML | CSS | JAVASCRIPT |
-                                    JQUERY | AJAX | PHP</p>
+                                    JQUERY | AJAX | PHP</p><br>
                                 <p><strong>Designing </strong>Graphics & UI/UX Designing : Adobe Photoshop | Adobe
                                     XD | Figma</p>
                             </div>
@@ -234,10 +237,15 @@
                 <div class="certification">
                     <div class="timeline__wrapper">
                         <div class="item">
-                            <p class="center">Google IT Automation with Python Professional Certificate
-                                (Google-Coursera)</p>
+                            <p class="center">Google IT Automation with Python Professional Certificate <br>
+                                (Google-Coursera)</p> <br>
                             <p><strong>2 </strong>Out of 6 Completed</p>
                             <p>1. Crash Course on Python<br>2. Using Python to Interact with the Operating System</p>
+                        </div>
+                        <div class="item">
+                            <p class="center">Google UX Design Professional Certificate
+                                (Google-Coursera)</p>
+                            <p>1. Foundations of User Experience (UX) Design</p>
                         </div>
                         <div class="item">
                             <p>September, 2020</p>
