--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         <span class="cd-words-wrapper">
                             <b class="is-visible">Programmer</b>
                             <b>UI/UX Designer</b>
-                            <b>Web Developer-FrontEnd</b>
+                            <b>FrontEnd-Developer</b>
                         </span>
                     </p>
                 </div>
@@ -65,7 +65,7 @@
                 </ul>
                 <ul class="social">
                     <li>
-                        <a href="">
+                        <a href="https://kritriv.github.io/Profile-Vishal.Saraiwal/">
                             <img src="./Images/icons/portfolio.png" alt="">
                         </a>
                     </li>
@@ -96,9 +96,14 @@
             <div class="content">
                 <div class="left">
                     <h2>I'm Vishal Saraiwal</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse pariatur quia, atque dolore quasi
-                        quo soluta officia saepe corrupti natus minima iure accusantium sint.</p>
-                    <button>Download CV</button>
+                    <p>To be a part of Studies & Professional that provides me with a challenging
+                        environment as well as the learning and experience.
+                        As a Computer Science Graduate Pursuing Student with knowledge of
+                        software
+                        Development and many more Skills , looking for an Job.
+                        Bringing Proficient knowledge of various Programing languages ,
+                        Creativeness , Excellent Communication and interpersonal Skills .</p>
+                    <a href="vish.pdf" target="_blank"><button>Download CV</button></a>
                 </div>
                 <div class="right">
                     <p>
@@ -170,7 +175,7 @@
                                 <p>11 Feb 2022 to Now</p>
                                 <p class="center">BR Softsol Pvt. Ltd.</p>
                                 <p>Web Developer | Designing Head</p><br>
-                                <p><strong>Web Developer </strong>FrontEnd-Developer : HTML | CSS | JAVASCRIPT |
+                                <p><strong>Web Developer </strong>FrontEnd-Developer : HTML | CSS | JAVASCRIPT | BOOTSTRAP |
                                     JQUERY | AJAX | PHP</p><br>
                                 <p><strong>Designing </strong>Graphics & UI/UX Designing : Adobe Photoshop | Adobe
                                     XD | Figma</p>
