--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
         <!-- Certification & Portfolio section Start -->
 
         <section class="work">
-            <h1 class="section__heading">My Certification Course & Portfolio</h1>
+            <h1 class="section__heading">Certification & Portfolio</h1>
 
             <div class="wrapper">
 
