--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                         Development and many more Skills , looking for an Job.
                         Bringing Proficient knowledge of various Programing languages ,
                         Creativeness , Excellent Communication and interpersonal Skills .</p>
-                    <a href="vish.pdf" target="_blank"><button>Download CV</button></a>
+                    <a href="Resume-Vishal Saraiwal.pdf" target="_blank"><button>Download CV</button></a>
                 </div>
                 <div class="right">
                     <p>
